[package]
description = "Go 1.25+ CSRF middleware port for Rust Tower"
edition = "2021"
license-file = "LICENSE"
name = "tower-csrf"
repository = "https://github.com/yawn/tower-csrf"
rust-version = "1.66"
version = "0.1.0"

[dependencies]
http = "1.0"
thiserror = "2.0"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["macros", "rt"] }
tower-test = "0.4"
tracing-subscriber = "0.3"
